JMEOS  1.3 (#9)
* fix: reverted the skipTests value from true to false in the pom.xml to run them & added .idea personal config files in the .gitignore

* fix: testSequence was aborting due to the usage of an outdated version of temporal_to_tsequence (temporal.c) which was still given a string as the interpolation type instead of an integer & added TestLogger in order to trace the lifecycle of each test and the parameters used

* fix: IntSpanSetTest assertion logic for the following tests : testScale & testShiftScale

* fix: added testSpans again in Float|Int-SpanSetTest, datespansettest completed

* fix: TFloatTest : testTosequenceset : assertion logic error : a TFloatInst has no interpolation but it used to be tested as a LINEAR one

* fix: TFloatTest, didnt commit some parts

* fix: TBoxTest : replaced old functions tbox_expand_(int,float) by new functions t(int,float)box_expand

* fix: STBoxTest: replaced geo_get_srid by geo_srid, pgis_geometry_in by geom_in, pgis_geography_in by geog_in, adapted ConversionUtils & TPoint files accordingly

* added GSL library to github workflow

* partial fix: TGeogPointTest & TGeomPointTest: fixed tests regarding tpoint_as_text now tspatial_as_text, tpoint_to_stbox now tspatial_to_stbox, tpoint_srid now tspatial_srid: tpoint_round, tpoint_start_value, tpoint_end_value left

* fix: TGeogPointTest & TGeomPointTest: can't have LINEAR interpolation with a single instance or a discret sequence set of TGeogPoint/TGeomPoint, fixed assertion using a STEP print verification (Interp=Step

* chore: removed personal comment used to debug testTosequenceset before

* feat: update JMEOS to MEOS 1.3

- Replace meos.h with v1.3 and add meos_geo.h
- Update FunctionsExtractor and Generator to support new headers and types
- Fix existing tests to match MEOS

* add: simple java program using JMEOS to create temporal geometry point values and output them in MF-JSON format

* add: renamed Hello_World_01 into Hello_World & created Hello_World_Geodetic